--- a/Lab2/Base.lproj/Mod A~.storyboard
+++ b/Lab2/Base.lproj/Mod A~.storyboard
@@ -9,6 +9,60 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View ControllerMA-->
+        <scene sceneID="tne-QT-ifu">
+            <objects>
+                <viewController id="BYZ-38-t0r" customClass="ViewControllerMA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mod A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdI-vy-PD0">
+                                <rect key="frame" x="166" y="323" width="50" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1577" y="-322"/>
+        </scene>
+        <!--View ControllerMB-->
+        <scene sceneID="fB7-x2-9SM">
+            <objects>
+                <viewController id="rCh-aJ-uzi" customClass="ViewControllerMB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fd1-uL-xB3"/>
+                        <viewControllerLayoutGuide type="bottom" id="nET-8i-JA5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DBq-PG-hRH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mod B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41c-8L-dtC">
+                                <rect key="frame" x="166" y="323" width="50" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gjt-lz-qvP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1577" y="362"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="NvJ-bg-6hY">
             <objects>
@@ -35,7 +89,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="hiq-PE-Exb" kind="show" id="VmC-uI-O7J"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="VmC-uI-O7J"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Mod B" textLabel="goD-CC-uJh" style="IBUITableViewCellStyleDefault" id="1qc-ZS-uEc">
@@ -55,7 +109,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aFf-ev-a0a" kind="show" id="7f1-56-Nal"/>
+                                    <segue destination="rCh-aJ-uzi" kind="show" id="7f1-56-Nal"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -85,22 +139,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZ4-mw-O3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-339" y="-51"/>
-        </scene>
-        <!--Mod A-->
-        <scene sceneID="fcY-Kw-HVD">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Mod A" id="hiq-PE-Exb" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="D61-pR-sYd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1577" y="-120"/>
-        </scene>
-        <!--Mod B-->
-        <scene sceneID="Iwi-HO-Rd2">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Mod B" id="aFf-ev-a0a" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="v7m-Ro-6Xp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1578" y="17"/>
         </scene>
     </scenes>
 </document>
