--- a/Lab2/Mod B~.storyboard
+++ b/Lab2/Mod B~.storyboard
@@ -9,6 +9,33 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View ControllerMB-->
+        <scene sceneID="fB7-x2-9SM">
+            <objects>
+                <viewController id="rCh-aJ-uzi" customClass="ViewControllerMB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fd1-uL-xB3"/>
+                        <viewControllerLayoutGuide type="bottom" id="nET-8i-JA5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DBq-PG-hRH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mod B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41c-8L-dtC">
+                                <rect key="frame" x="166" y="323" width="50" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gjt-lz-qvP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1577" y="362"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="NvJ-bg-6hY">
             <objects>
@@ -55,7 +82,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aFf-ev-a0a" kind="show" id="7f1-56-Nal"/>
+                                    <segue destination="rCh-aJ-uzi" kind="show" id="7f1-56-Nal"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -92,15 +119,7 @@
                 <viewControllerPlaceholder storyboardName="Mod A" id="hiq-PE-Exb" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D61-pR-sYd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1577" y="-120"/>
-        </scene>
-        <!--Mod B-->
-        <scene sceneID="Iwi-HO-Rd2">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Mod B" id="aFf-ev-a0a" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="v7m-Ro-6Xp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1578" y="17"/>
+            <point key="canvasLocation" x="1577" y="-322"/>
         </scene>
     </scenes>
 </document>
